--- a/app/globals.css
+++ b/app/globals.css
@@ -16,14 +16,10 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer components {
+  .btn {
+    @apply border p-1 px-2 rounded-lg text-white text-sm;
+  }
 }
 
 @layer utilities {
